--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.data.mongodb.database=ipudb
 spring.data.mongodb.host=ipudb
 spring.data.mongodb.port=27017
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
