--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,9 @@ src/main/java/com/company/employee/config/*.java
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-actuator</artifactId></dependency>
+
+<dependency><groupId>io.micrometer</groupId><artifactId>micrometer-registry-prometheus</artifactId></dependency>
 
 		<dependency>
     <groupId>io.springfox</groupId>
